# b3-api-dados-tratados

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Gemfile  Makefile  README.md  Rakefile  docker-compose.yml  env.development  env.test  start_process.sh
client/: index.html  package.json
client/src/: App.js  _nav.js  routes.js  server.js  store.js
migrations/2024-02-25-000921_create_calendars/: down.sql  up.sql
migrations/2024-02-29-024304_create_holidays/: down.sql  up.sql
migrations/2024-02-29-025418_create_currencies/: down.sql  up.sql
migrations/2024-02-29-025929_create_company/: down.sql  up.sql
migrations/2024-02-29-025936_create_tickers/: down.sql  up.sql
migrations/2024-02-29-030712_create_quotes/: down.sql  up.sql
migrations/2024-02-29-113020_create_theory_portfolios/: down.sql  up.sql
migrations/2024-02-29-113028_create_theory_portfolio_transactions/: down.sql  up.sql
migrations/2024-03-07-185354_create_indicators_and_indicator_values/: down.sql  up.sql
migrations/2024-03-08-015605_create_segments_subsectors_and_sectors/: down.sql  up.sql
migrations/2024-03-08-020510_add_segments_to_companies/: down.sql  up.sql
migrations/2024-03-08-113122_create_new_fields_to_companies_and_tickers/: down.sql  up.sql
migrations/2024-03-08-224439_create_assets_and_clients/: down.sql  up.sql
mysql/: Dockerfile  init-db.sh
postgres/: Dockerfile  init-db.sh  postgres.conf
seed/: DEFAULT.sql
src/: actions.rs  connections.rs  cors.rs  job.rs  main.rs  models.rs  schema.rs  server.rs  test.rs
src/controllers/: calendars.rs  companies.rs  (+11 more)
(+90 files in other folders)
