[package]
name = "ghostfoliodata"
version = "0.1.0"
edition = "2021"
publish = false


[dependencies]
rocket = { version = "0.5.0", features = ["json"]}
rocket_contrib = "0.4.11"
rocket_codegen = "0.5.0"
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "time", "chrono", "serde_json"] }
serde = "1.0.197"
chrono = { version = "0.4.34", features = ["serde"] }
